--- a/templates/logged.html
+++ b/templates/logged.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Logged</title>
   </head>
   <body>
-    <h1>Succefully logged!</h1>
-    <h2 id="token"></h2>
+    <h1>Successfully logged!</h1>
+
+    <h2 style="display: flex; gap: 5px; align-items: center">
+      <span>Token: </span
+      ><textarea
+        id="token"
+        style="color: darkred; width: 600px; height: 200px"
+      ></textarea>
+    </h2>
     <a
       href="https://fbfdestro.us.auth0.com/v2/logout?
   client_id=y0Gnswv1AoQCcyu1euwHUYLAwnMZrcUZ&
@@ -18,6 +25,8 @@
   <script>
     const tokenElement = document.getElementById('token');
     var hash = window.location.hash.substring(1); //Puts hash in variable, and removes the # character
-    tokenElement.innerText = hash;
+    console.log(hash);
+    var token = hash.substring(hash.indexOf('=') + 1, hash.indexOf('&'));
+    tokenElement.innerText = token;
   </script>
 </html>
