feat: added movies tests

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,18 +9,21 @@
     <div class="users">
       <h2>Possible users (email and password)</h2>
       <div class="user">
+        <h4>Assistant</h4>
         <ul>
           <li>assistant@agency.com</li>
           <li>abcd1234**</li>
         </ul>
       </div>
       <div class="user">
+        <h4>Director</h4>
         <ul>
           <li>director@agency.com</li>
           <li>abcd1234**</li>
         </ul>
       </div>
       <div class="user">
+        <h4>Producer</h4>
         <ul>
           <li>producer@agency.com</li>
           <li>abcd1234**</li>
@@ -30,6 +33,10 @@
         href="https://fbfdestro.us.auth0.com/authorize?audience=casting-agency&response_type=token&client_id=y0Gnswv1AoQCcyu1euwHUYLAwnMZrcUZ&redirect_uri=https://fbfdestro-casting-agency.herokuapp.com/callback"
         target="_blank"
         >Login</a
+      >
+      <span
+        >To login into multiple accounts at the same time, you can use different incognito
+        windows</span
       >
     </div>
     <hr />
