--- a/templates/logged.html
+++ b/templates/logged.html
@@ -6,7 +6,7 @@
     <title>Logged</title>
   </head>
   <body>
-    <h1>Successfully logged!</h1>
+    <h1>You are logged in!</h1>
 
     <h2 style="display: flex; gap: 5px; align-items: center">
       <span>Token: </span
