docs: added api documentation on readme

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,27 +9,38 @@
     <div class="users">
       <h2>Possible users (email and password)</h2>
       <div class="user">
-        <h4>Assistant</h4>
+        <h4>Casting Assistant</h4>
         <ul>
           <li>assistant@agency.com</li>
           <li>abcd1234**</li>
         </ul>
+        <p>Can view actors and movies</p>
       </div>
       <div class="user">
-        <h4>Director</h4>
+        <h4>Casting Director</h4>
         <ul>
           <li>director@agency.com</li>
           <li>abcd1234**</li>
         </ul>
+        <p>
+          All permissions a Casting Assistant has and…<br />
+          Add or delete an actor from the database<br />
+          Modify actors or movies
+        </p>
       </div>
       <div class="user">
-        <h4>Producer</h4>
+        <h4>Executive Producer</h4>
         <ul>
           <li>producer@agency.com</li>
           <li>abcd1234**</li>
         </ul>
+        <p>
+          All permissions a Casting Director has and…<br />
+          Add or delete a movie from the database
+        </p>
       </div>
       <a
+        style="font-size: large; color: red"
         href="https://fbfdestro.us.auth0.com/authorize?audience=casting-agency&response_type=token&client_id=y0Gnswv1AoQCcyu1euwHUYLAwnMZrcUZ&redirect_uri=https://fbfdestro-casting-agency.herokuapp.com/callback"
         target="_blank"
         >Login</a
